# P-LoRA-CL

./: .gitignore  AGENTS.md  LICENSE  README.md  STATUS.md  autoenv  autoenv.leave  feasibility-analysis.md  install  p-lora-cl.md  pyproject.toml
docs/: 01-capa.md  02-folha-de-rosto.md  03-folha-de-aprovacao.md  04-dedicatoria.md  05-agradecimentos.md  06-resumo.md  07-abstract.md  08-listas.md  09-sumario.md  10-capitulo-1-introducao.md  11-capitulo-2-referencial-teorico.md  12-capitulo-3-metodologia.md  13-capitulo-4-resultados-e-discussao.md  14-capitulo-5-conclusao.md  15-referencias-bibliograficas.md  16-apendices.md  CHECKPOINTING.md  paper.md
docs/paper/: 0. Resumo.md  10. Lista de Ilustrações.md  11. Lista de Símbolos.md  6. Referências Bibliográficas.md  7. Apêndices.md  8. Anexos.md  9. Lista de Abreviações.md
docs/paper/1. Introdução/: 1.6. Estrutura do trabalho.md
docs/paper/1. Introdução/1.1. Contextualização e motivação/: 1.1.1. Desafio do aprendizado contínuo em PLN.md  1.1.2. Esquecimento catastrófico em sequências de tarefas.md  1.1.3. Restrições práticas.md  1.1.4. Necessidade de equilibrar plasticidade e estabilidade.md
docs/paper/1. Introdução/1.2. Problema de pesquisa/: 1.2.1. Reduzir o esquecimento.md
docs/paper/1. Introdução/1.3. Objetivos gerais e específicos/: 1.3.1. Objetivo geral.md  1.3.2. Objetivo específico 1.md  1.3.3. Objetivo específico 2.md  1.3.4. Objetivo específico 3.md  1.3.5. Objetivo específico 4.md  1.3.6. Objetivo específico 5.md
docs/paper/1. Introdução/1.4. Justificativa/: 1.4.1. Relevância prática do aprendizado contínuo em PLN.md  1.4.2. Lacuna na integração sistemática das técnicas propostas.md  1.4.3. Viabilidade para contexto acadêmico com recursos moderados.md
docs/paper/1. Introdução/1.5. Principais contribuições/: 1.5.1. Contribuição conceitual.md  1.5.2. Contribuição metodológica.md  1.5.3. Contribuição de engenharia.md  1.5.4. Contribuição de artefatos.md
docs/paper/2. Referencial Teórico/2.1. Aprendizado contínuo em PLN/: 2.1.1. Definição e desafios do aprendizado contínuo.md  2.1.2. Dilema estabilidade-plasticidade.md  2.1.3. Esquecimento catastrófico em redes neurais.md  2.1.4. Contexto específico do PLN.md
docs/paper/2. Referencial Teórico/2.1. Fundamentação teórica sobre aprendizado contínuo em PLN/: 2.1.1. Definição e desafios do aprendizado contínuo.md  2.1.2. Dilema estabilidade-plasticidade.md  2.1.3. Esquecimento catastrófico em redes neurais.md  2.1.4. Contexto específico do PLN.md
docs/paper/2. Referencial Teórico/2.2. Redes Neurais Progressivas/: 2.2.1. Conceito e arquitetura básica.md  2.2.2. Isolamento de parâmetros por tarefa.md  2.2.3. Conexões laterais e transferência de conhecimento.md  2.2.4. Vantagens e limitações.md
docs/paper/2. Referencial Teórico/2.3. Adaptações de Baixo Ranque com Restrições Ortogonais/: 2.3.1. LoRA: adaptação eficiente de parâmetros.md  2.3.2. Decomposição de baixo ranque.md  2.3.3. Eficiência paramétrica e computacional.md  2.3.4. O-LoRA: imposição de ortogonalidade entre adaptadores.md  2.3.5. Isolamento em subespaços distintos.md  2.3.6. Vantagens e limitações.md
experiments/: config.yaml  config.yaml.example
scripts/: build_doc.py
src/plora_cl/cli/: __init__.py  __main__.py  train.py  visualize.py
src/plora_cl/data/: __init__.py  datasets.py  preprocessing.py
src/plora_cl/evaluation/: __init__.py  metrics.py  tracker.py
src/plora_cl/models/: __init__.py  base_model.py  ewc.py  lora_adapters.py  orthogonal_lora.py
src/plora_cl/training/: __init__.py  baselines.py  loss.py  replay.py  trainer.py
(+88 files in other folders)
